# Langchain_CC

./: .gitignore  README.md  pyproject.toml
agents/: agents_basics.py  agents_react_chat.py  agents_react_datastore.py
chains/: chain_basics.py  chains_branching.py  chains_extended.py  chains_parallel.py  chains_under_the_hood.py
chat_models/: chat_model_basic.py  chat_model_conversation.py  chat_model_conversation_save_history.py
prompt_models/: prompt_template_basic.py  prompt_template_with_chat.py
rag/: rag_conversational.py  rag_embeddings.py  rag_one_off_question.py  rag_retrievers.py  rag_text_splittings.py  rag_webscrapping.py  rag_with_metadata.py
rag/db/chroma_db_char/: chroma.sqlite3
rag/db/chroma_db_hfembed/: chroma.sqlite3
rag/db/chroma_db_openaiembed/: chroma.sqlite3
rag/db/chroma_db_playstation/: chroma.sqlite3
rag/db/chroma_db_recur/: chroma.sqlite3
rag/db/chroma_db_sent/: chroma.sqlite3
rag/db/chroma_db_token/: chroma.sqlite3
rag/db/chroma_db_with_metadata/37b39f56-8fb0-41d6-9d5e-10f04cb03857/: index_metadata.pickle
tools/: tool_BaseModel.py  tool_constructor.py  tool_decorator.py
